--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -6,5 +6,19 @@
   @include min-height100();
 
   background-color: $gray-100;
+  display: flex;
+  flex-direction: column;
 
+  .content {
+    padding: 16px $side-padding;
+    flex-grow: 1;
+
+    .content-card {
+      height: 100%;
+      background-color: white;
+      box-shadow: 0 0 16px rgba(#000, 0.1);
+      padding: 1.5em;
+      border-radius: 4px;
+    }
+  }
 }
