--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family: Ubuntu, sans-serif;
+  font-family: Roboto, sans-serif;
   color: $gray-900;
   box-sizing: border-box;
 
