--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -2,6 +2,7 @@
 @import 'assets/styles/_colors.scss';
 @import 'assets/styles/_variables.scss';
 
+
 .app-root {
   @include min-height100();
 
@@ -17,8 +18,15 @@
       height: 100%;
       background-color: white;
       box-shadow: 0 0 16px rgba(#000, 0.1);
-      padding: 1.5em;
+      //padding: 1.5em;
       border-radius: 4px;
     }
+  }
+
+  .credits {
+    padding: 0.5em $side-padding;
+    color: $gray-500;
+    font-size: 0.8em;
+    text-align: right;
   }
 }
