--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,11 +1,9 @@
-@import 'assets/styles/_mixins.scss';
 @import 'assets/styles/_colors.scss';
 @import 'assets/styles/_variables.scss';
 
 
 .app-root {
-  @include min-height100();
-
+  min-height: 100%;
   background-color: $gray-100;
   display: flex;
   flex-direction: column;
