--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -11,13 +11,23 @@
   .content {
     padding: 16px $side-padding;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 
     .content-card {
-      height: 100%;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       background-color: white;
       box-shadow: 0 0 16px rgba(#000, 0.1);
-      //padding: 1.5em;
       border-radius: 4px;
+      overflow: hidden;
+
+      .employees-table-outer {
+        flex-grow: 1;
+        width: 100%;
+      }
     }
   }
 
