--- a/src/components/AppHeader/AppHeader.module.scss
+++ b/src/components/AppHeader/AppHeader.module.scss
@@ -8,14 +8,8 @@
   display: flex;
   align-items: center;
 
-  .icon {
-    width: 2em;
-    height: 2em;
-    margin-right: 1em;
-  }
-
   .header {
-    margin: 0;
+    margin: 0 0 0 0.5em;
     font-size: 1.2em;
     font-weight: 700;
   }
