--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -8,7 +8,8 @@
   flex-direction: column;
 
   .content {
-    padding: 16px $side-padding;
+    padding-top: 16px;
+    padding-bottom: 16px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
